--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,3 +1,8 @@
+html, body, .container {
+    min-height: 100%;
+    height: 100%;
+    overflow: hidden;
+}
 body {
     background: #fafafa;
     color: #333;
