--- a/app/views/compass.html
+++ b/app/views/compass.html
@@ -4,5 +4,5 @@
         <h1>Compass</h1>
     </header>
 </section>
-<section class="compass">
+<section ng-style="direction" class="compass">
 </section>
