--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,10 +1,5 @@
-html, body, .container {
+.container {
     min-height: 100%;
     height: 100%;
     overflow: hidden;
 }
-body {
-    background: #fafafa;
-    color: #333;
-}
-
