--- a/app/views/compass.html
+++ b/app/views/compass.html
@@ -3,7 +3,7 @@
         <a href="#/"><span class="icon icon-back">back</span></a>
         <h1>Compass</h1>
     </header>
-    <div>{{ northBasedDirection }} - {{ orientation }} = {{ degree }}</div>
+    <div>{{ northBasedDirection }} - {{ orientation }} = {{ angle }}</div>
     <div data-ng-style="direction" class="compass">
     </div>
 </section>
