--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -3,3 +3,19 @@
     height: 100%;
     overflow: hidden;
 }
+
+.main-menu button {
+    height: 100%;
+    text-align: center;
+    font-size: 120%;
+}
+
+.main-menu ul {
+    height: 60%;
+    margin: 5% 0;
+}
+
+.main-menu li {
+    height: 40%;
+    margin: 0 0 5%;
+}
