--- a/app/views/locate.html
+++ b/app/views/locate.html
@@ -1,7 +1,17 @@
-<section role="region">
+<section role="region" class="locate">
     <header>
         <a href="#/"><span class="icon icon-back">back</span></a>
-        <h1>Wait...</h1>
+        <h1>Please Wait...</h1>
     </header>
-        Please, wait. We are about to locate your car.
+    <div data-ng-show="!positionUpdated">
+        <h1>Looking for your location...</h1>
+        <img src="images/spinner.png"/>
+        <button class="bottom" onClick="javascript:location.href = '/#/';">Back</button>
+    </div>
+    <div data-ng-show="positionUpdated">
+        <h1>Location saved!</h1>
+        <h2>You can close Application now</h2>
+        <button class="bottom" onClick="javascript:location.href = '/#/';">Done</button>
+    </div>
+
 </section>
