Emulator testing. Small improvements.

--- a/app/views/locate.html
+++ b/app/views/locate.html
@@ -6,12 +6,12 @@
     <div data-ng-show="!positionUpdated">
         <h1>Looking for your location...</h1>
         <img src="images/spinner.png"/>
-        <button class="bottom" onClick="javascript:location.href = '/#/';">Back</button>
+        <button class="bottom" onClick="javascript:location.href = '#/';">Back</button>
     </div>
     <div data-ng-show="positionUpdated">
         <h1>Location saved!</h1>
         <h2>You can close Application now</h2>
-        <button class="bottom" onClick="javascript:location.href = '/#/';">Done</button>
+        <button class="bottom" onClick="javascript:location.href = '#/';">Done</button>
     </div>
 
 </section>
