--- a/app/views/compass.html
+++ b/app/views/compass.html
@@ -1,8 +1,9 @@
-<section role="region">
+<section role="region" class="compass">
     <header>
         <a href="#/"><span class="icon icon-back">back</span></a>
         <h1>Compass</h1>
     </header>
-    <div data-ng-style="direction" class="compass">
+    <div data-ng-style="direction" class="arrow">
     </div>
+    <button class="bottom" onClick="javascript:location.href = '#/';">Back</button>
 </section>
