--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -8,6 +8,7 @@
     height: 100%;
     text-align: center;
     font-size: 120%;
+    margin: 3px;
 }
 
 .main-menu ul {
@@ -32,5 +33,5 @@
 .locate button.bottom {
     margin: 1px;
     position: absolute;
-    bottom: 0px;
+    bottom: 0;
 }
