--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -35,3 +35,29 @@
     position: absolute;
     bottom: 0;
 }
+
+.wave-enter-setup, .wave-leave-setup {
+    -webkit-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) .5s;
+    -moz-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+    -o-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
+    transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) .5s;
+    line-height:100%;
+}
+
+.wave-enter-setup {
+    position:relative;
+    left:100%;
+    line-height:100%;
+}
+
+
+.wave-enter-start {
+    left:0;
+    line-height:100%;
+}
+
+.wave-leave-setup {
+    position:absolute;
+    left:0;
+    line-height: 100%;
+}
