--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -2,10 +2,27 @@
     min-height: 100%;
     height: 100%;
     overflow: hidden;
+    background: url(/images/map.jpg) no-repeat center center;
+    background-position: center;
+    font-style:  oblique;
+    font-weight: bold;
+}
+
+.parallax, .parallax img {
+    position: absolute;
+    width: 100%;
 }
 
 .main-menu button {
-    height: 100%;
+    opacity: 0.6;
+
+    -moz-transition: opacity 0.5s;
+    -ms-transition: opacity 0.5s;
+    -o-transition: opacity 0.5s;
+    -webkit-transition: opacity 0.5s;
+    transition: opacity 0.5s;
+
+    height: 30%;
     text-align: center;
     font-size: 120%;
     margin: 3px;
@@ -17,7 +34,7 @@
 }
 
 .main-menu li {
-    height: 40%;
+
     margin: 0 0 5%;
 }
 
