Spinner replaced with Firefox OS default one

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -47,6 +47,22 @@
     margin: auto;
 }
 
+.locate .spinner {
+    animation-duration: 30s;
+    animation-name: spin;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+}
+
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(14400deg);
+    }
+}
+
 .locate button.bottom {
     margin: 1px;
     position: absolute;
