--- a/app/views/locate.html
+++ b/app/views/locate.html
@@ -5,7 +5,7 @@
     </header>
     <div data-ng-show="!positionUpdated">
         <h1>Looking for your location...</h1>
-        <img src="images/spinner.png"/>
+        <img class="spinner" src="images/progress_activity/ui/default@1.5x.png"/>
         <button class="bottom" onClick="javascript:location.href = '#/';">Back</button>
     </div>
     <div data-ng-show="positionUpdated">
