--- a/app/views/compass.html
+++ b/app/views/compass.html
@@ -1,4 +1,4 @@
-<section role="region" class="compass">
+<section role="region" class="screen compass">
     <header>
         <a href="#/"><span class="icon icon-back">back</span></a>
         <h1>Compass</h1>
