--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,4 +1,4 @@
-<section role="region" class="main-menu">
+<section role="region" class="screen main-menu">
     <header>
         <h1>Find My Car</h1>
     </header>
