--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,9 +1,11 @@
+body {
+    background: url(/images/map.jpg) no-repeat center;
+}
+
 .container {
     min-height: 100%;
     height: 100%;
     overflow: hidden;
-    background: url(/images/map.jpg) no-repeat center center;
-    background-position: center;
     font-style:  oblique;
     font-weight: bold;
 }
@@ -69,28 +71,29 @@
     bottom: 0;
 }
 
-.wave-enter-setup, .wave-leave-setup {
-    -webkit-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) .5s;
-    -moz-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
-    -o-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.5s;
-    transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) .5s;
-    line-height:100%;
+.container {
+    -webkit-transition:1s linear all;
+    -moz-transition:1s linear all;
+    -o-transition:1s linear all;
+    transition:1s linear all;
 }
 
-.wave-enter-setup {
-    position:relative;
-    left:100%;
-    line-height:100%;
+.container.ng-leave {
+    left: 0;
+    position: absolute;
+    width: 100%;
 }
 
-
-.wave-enter-start {
-    left:0;
-    line-height:100%;
+.container.ng-enter {
+    left: 100%;
+    position: absolute;
+    width: 100%;
 }
 
-.wave-leave-setup {
-    position:absolute;
-    left:0;
-    line-height: 100%;
+.container.ng-enter-active {
+    left: 0;
+}
+
+.container.ng-leave-active {
+    left: -100%;
 }
