--- a/app/views/main.html
+++ b/app/views/main.html
@@ -4,13 +4,13 @@
     </header>
     <ul>
         <li>
-            <button onClick="javascript:location.href = '#/locate';"
+            <button onClick="location.href = '#/locate';"
                     data-ng-disabled="!locationServicesAvailable || !deviceOrientationAvailable">
                 Save Location
             </button>
         </li>
         <li>
-            <button onClick="javascript:location.href = '#/compass';"
+            <button onClick="location.href = '#/compass';"
                     data-ng-disabled="!carPosition || !locationServicesAvailable || !deviceOrientationAvailable">
                 Find My Car!
             </button>
