--- a/app/views/locate.html
+++ b/app/views/locate.html
@@ -1,12 +1,21 @@
 <section role="region" class="screen locate">
     <header>
         <a href="#/"><span class="icon icon-back">back</span></a>
+        <menu type="toolbar">
+            <button data-ng-click="showInfo = !showInfo">Info</button>
+        </menu>
         <h1>Please Wait...</h1>
     </header>
     <div data-ng-show="!positionUpdated">
         <h1>Looking for your location...</h1>
         <img class="spinner" src="images/progress_activity/ui/default@1.5x.png"/>
-        <button class="bottom" onClick="location.href = '#/';">Back</button>
+        <div class="bottom">
+            <div data-ng-show="showInfo">
+                <p class="mini">GPS accuracy: {{ accuracy }} meters</p>
+                <p class="mini">Accuracy should be lower than: {{ targetAccuracy }} meters</p>
+            </div>
+            <button class="bottom" onClick="location.href = '#/';">Back</button>
+        </div>
     </div>
     <div data-ng-show="positionUpdated">
         <h1>Location saved!</h1>
