floating button fix

--- a/app/views/locate.html
+++ b/app/views/locate.html
@@ -21,5 +21,7 @@
         <h1>Location saved!</h1>
         <h2>You can close Application now</h2>
     </div>
-    <button data-ng-show="positionUpdated" class="bottom" onClick="location.href = '#/';">Done</button>
+    <div class="bottom">
+        <button data-ng-show="positionUpdated" class="bottom" onClick="location.href = '#/';">Done</button>
+    </div>
 </section>
