--- a/app/styles/compass.css
+++ b/app/styles/compass.css
@@ -4,9 +4,9 @@
     transition-timing-function: ease-in-out;
     background: url(/images/arrow.png) no-repeat center center;
     background-size: contain;
-    width: 40%;
+    max-width: 70%;
     height: 50%;
-    margin: 30%;
+    margin: 10% auto;
 }
 
 .compass .bottom {
